--- a/includes/css.css
+++ b/includes/css.css
@@ -1,12 +1,9 @@
 /*load fonts*/
 @font-face {font-family:'Montserrat';font-style:normal;font-weight:400;src:url('css/fonts/montserrat-v14-latin-regular.eot');src:local('Montserrat Regular'),local('Montserrat-Regular'),url('css/fonts/montserrat-v14-latin-regular.eot?#iefix') format('embedded-opentype'),url('css/fonts/montserrat-v14-latin-regular.woff2') format('woff2'),url('css/fonts/montserrat-v14-latin-regular.woff') format('woff'),url('css/fonts/montserrat-v14-latin-regular.ttf') format('truetype'),url('css/fonts/montserrat-v14-latin-regular.svg#Montserrat') format('svg');}
 
-
-
 /*skeleton elements*/
 *       {margin:0;padding:0;color:#222222;box-sizing:border-box;display:flex;}
 head    {display:none;}
-
 body    {height:100vh;width:100vw;background-color:#EEEEEE;flex-flow:column;font-family:'Montserrat';}
 	
 header  {background-color:#FFFFFF;border-bottom:2px solid #CCCCCC;overflow-x:auto;width:100%;font-weight:600;}
@@ -21,6 +18,7 @@ input, select {
     height:36px;padding:0 10px;color:#222222;width:100%;min-width:0px;outline:0;
     background-color:#FFFFFF00;border:none;
 }
+input:disabled, select:disabled {color:#CCCCCC;}
 select {-moz-appearance:none;-webkit-appearance:none;appearance:none;
 }
 .selectWrapper::after {content:'\25BC';position:absolute;right:10px;font-size:1.3em;color:#CCCCCC;pointer-events:none;}
@@ -45,24 +43,25 @@ input[type=datetime-local]::-webkit-inner-spin-button,input[type=date]::-webkit-
 .inputWrapper:focus-within>div, .inputWrapper.inputFilled>div {top:0;font-size:0.7em;width:auto;}
 .inputWrapper.inputValid {border-color:#3282B8;}
 .inputWrapper.inputError {border-color:#FF111177;}
+.inputWrapper.disabled {display:none;}
 
 
 
 
 
-.button {
+button {
 	border-radius:10px;height:36px;padding:0 10px;
     outline:none;background-color:#FFFFFF;border:solid 2px #3282B8;
     display:grid;grid-auto-flow:column;grid-column-gap:10px;
 }
-.button, .button * {
+button, button * {
     color:#3282B8;cursor:pointer;text-decoration:none;font-weight:600;font-size:0.95em;
     justify-content:center;align-items:center;text-transform:uppercase;color:#3282B8;
     white-space:nowrap;
 }
-.button:hover, .button:hover * {background-color:#3282B8;color:#FFFFFF;}
-.button span {display:none;}
-.button:hover span {display:flex;}
+button:hover, button:hover * {background-color:#3282B8;color:#FFFFFF;}
+button div {display:none;}
+button:hover div {display:flex;}
 
 
 /*my elements*/
@@ -213,6 +212,9 @@ input.error {background-color:#FF223322;}
 .alignTop, .at {align-items:baseline;}
 .alignCenter, .ac {align-items:center;}
 .alignBottom, .ab {align-items:end;}
+.textAlignLeft, .tal {text-align:left;}
+.textAlignRight, .tar {text-align:right;}
+.textAlignCenter, .tac {text-align:center;}
 
 
 
