--- a/includes/css.css
+++ b/includes/css.css
@@ -48,10 +48,9 @@ input[type=datetime-local]::-webkit-inner-spin-button,input[type=date]::-webkit-
 
 
 
-
 button {
-	border-radius:10px;height:36px;padding:0 10px;
-    outline:none;background-color:#FFFFFF;border:solid 2px #3282B8;
+	border-radius:10px;height:36px;padding:0 10px;outline:none;
+    min-width:36px;background-color:#FFFFFF;border:solid 2px #3282B8;
     display:grid;grid-auto-flow:column;grid-column-gap:10px;
 }
 button, button * {
@@ -63,6 +62,12 @@ button:hover, button:hover * {background-color:#3282B8;color:#FFFFFF;}
 button div {display:none;}
 button:hover div {display:flex;}
 
+button.errorButton {border-color:#FF0000AA;}
+button.errorButton:hover, button.errorButton:hover * {background-color:#FF0000AA;}
+button.errorButton * {color:#FF0000AA;}
+
+.closeButton {width:36px;height:36px;justify-content:center;cursor:pointer;font-size:1.25em;}
+.closeButton:hover {font-weight:600;}
 
 /*my elements*/
 /*don't show scrollbar*/
@@ -75,36 +80,37 @@ header > * > * {padding:20px;border-right:1px solid #CCCCCC;min-width:120px;just
 header > * > *:hover {background-color:#BBE1FA;color:#FFFFFF;}
 header > * > *.highlight {background-color:#3282B8;}
 
-#wrapperMain {display:block;text-align:center;margin:0 auto;padding:5px 0;flex:1;overflow-y:scroll;}
+#wrapperMain {
+    display:block;text-align:center;margin:0 auto;padding:10px 0;flex:1;overflow-y:scroll;
+}
+/*don't show scrollbar*/ /**/
+#wrapperMain  {-ms-overflow-style:none;scrollbar-width:none;}
+#wrapperMain::-webkit-scrollbar {display:none;}
+/**/
 main {
 	min-width:40%;max-width:80vw;text-align:center;overflow-wrap:break-word;
 	/*.singleColumn*/
-	display:inline-grid;grid-template-columns:repeat(1,auto);grid-row-gap:5px;
+	display:inline-grid;grid-template-columns:repeat(1,auto);grid-row-gap:10px;
 }
 main > *:nth-last-child(1) {margin-bottom:5px;}
 
 
 /*my dimensions*/
+.h100 {height:100%;}
 .lh {height:36px;}
 .lhSquare {height:36px;width:36px;}
+.mediumSquare {height:31px;width:31px;}
 .widthLh {width:36px;}
 .width2Lh {width:72px;}
 .width3Lh {width:108px;}
 .width4Lh {width:144px;}
 .width5Lh {width:180px;}
+.widthLhNoBorder {width:36px;}
+.width2LhNoBorder {width:72px;}
+.width3LhNoBorder {width:108px;}
+.width4LhNoBorder {width:144px;}
+.width5LhNoBorder {width:180px;}
 
-/*my element classes*/
-.h100 {height:100%;}
-.click {cursor:pointer;}
-.click:active {background-color:#EEEEEE;}
-.hidden {display:none !important;}
-.error {color:#FF111177 !important;}
-.highlight {background-color:#1E90FF;color:#FFFFFF;font-weight:600;}
-.lightText {color:#999999;}
-.accentText {color:#1E90FF;}
-.transparent {opacity:0;}
-
-input.error {background-color:#FF223322;}
 
 
 /*my panels*/
@@ -122,30 +128,17 @@ input.error {background-color:#FF223322;}
 
 
 /*my forms*/
-.form {display:grid;grid-template-columns:repeat(1,auto);grid-row-gap:10px;}
-
+.form {position:relative;display:grid;grid-template-columns:repeat(1,auto);grid-row-gap:10px;}
+.form .form {flex:1;border-top:solid 1px #CCCCCC;padding-top:10px;}
 
 /*my columns*/
 .singleColumn {display:grid;grid-template-columns:repeat(1,auto);grid-row-gap:10px;}
 
-/*
-.singleColumn {grid-row-gap:0px;}
-.singleColumnSmallGap {grid-row-gap:5px;}
-.singleColumnMediumGap {grid-row-gap:10px;}
-.singleColumnGap {grid-row-gap:10px;}
-.singleColumnNoGap {grid-row-gap:0px;}
-*/
 
 
 /*my rows*/
 .equalRow {display:grid;grid-auto-flow:column;grid-auto-columns: 1fr;}
 .singleRow {display:grid;grid-auto-flow:column;grid-column-gap:10px;}
-/*
-.singleRowNoGap {grid-column-gap:0px;}
-.singleRowSmallGap {grid-column-gap:5px;}
-.singleRowMediumGap {grid-column-gap:10px;}
-.singleRowGap {grid-column-gap:10px;}
-*/
 
 
 
@@ -224,8 +217,7 @@ input.error {background-color:#FF223322;}
 .borderRight {border-right:2px solid #CCCCCC;}
 .borderBottom {border-bottom:2px solid #CCCCCC;}
 .borderLeft {border-left:2px solid #CCCCCC;}
-
-.lightBg {background-color:#EEEEEE;}
+.borderRadius {border-radius:10px;}
 
 
 /*geometry*/
@@ -268,6 +260,34 @@ input.error {background-color:#FF223322;}
 #responseLogIcon {position:absolute;bottom:5px;right:5px;height:50px;width:50px;cursor:pointer;z-index:1;background-color:#999999;border-radius:25px;}
 #responseLogIcon > * {height:100%;width:100%;}
 #responseLog {position:fixed;bottom:20px;right:0px;background-color:#BBE1FA;overflow-wrap:break-word;min-width:400px;min-height:400px;border-radius:0 0 30px 0;overflow-y:auto;z-index:1;flex-direction:column;}
+
+
+
+/*my classes*/
+.hidden {display:none !important;}
+.error {color:#FF111177 !important;}
+.highlight {background-color:#1E90FF;color:#FFFFFF;font-weight:600;}
+
+.click {cursor:pointer;}
+.click:active {background-color:#EEEEEE;}
+
+.lightText {color:#999999;}
+.accentText {color:#3282B8;}
+
+.lightBg {background-color:#EEEEEE;}
+.accentBg {background-color:#3282B8;}
+
+.accentBorder {border-color:#3282B8;}
+.lightAccentBorder {border-color:#3282B899;}
+
+
+.transparent {opacity:0;}
+
+.padLeftRight {padding:0 10px;}
+
+
+
+
 
 
 @media(max-width:768px){
