--- a/includes/css.css
+++ b/includes/css.css
@@ -302,5 +302,8 @@ main > *:nth-last-child(1) {margin-bottom:5px;}
 @media(max-width:768px){
 	button:active {background-color:#EEEEEE;color:#CCCCCC;}
     #wrapperMain {padding-top:5px;}
-	main {min-width:100vw;max-width:100vw;border-left:5px solid #EEEEEE;border-right:5px solid #EEEEEE;}
+	main {
+        min-width:100vw;max-width:100vw;border-left:5px solid #EEEEEE;
+        border-right:5px solid #EEEEEE;grid-row-gap:5px;
+    }
 }
